# aegis-python

./: README.md  challenges.md  main.py  pyproject.toml
src/cli/: cli_command.py
